# web-search-mcp

./: .gitignore  README.es.md  README.md  install.sh  pyproject.toml  server.py  setup.py
src/web_search_mcp/: __init__.py  app.py  config.py  errors.py  evidence.py  fetch.py  logging_config.py  prompts.py  query_expansion.py  query_intent.py  query_refinement.py  response_intent.py  schemas.py  search.py  server.py  service.py  source_scoring.py  tools.py  url_utils.py  workflow_guidance.py
tests/: test_iterative_search.py  test_prompts.py
